--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.navigation-bar {
+  background: #00ADFF;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.navigation-bar li a {
+  text-decoration: none;
+  font-size: 28px;
+  font-weight: bold;
+  color: #C1EBFF;
+}
+
+.navigation-bar li a:hover, .navigation-bar li .selected {
+  color: white;
+}
+
